07-17-2002: aka 1.0.0
	-Added header files for libc functions we are already using,
	 but weren't including the proper header files.
	-Switched to using tmpfile instead of tmpnam for the temporary
	 file, this will fix the compiler warnings.
	-The newer bison required a semicolon and would not compile
	 until it was added.
	-Replaced tmpnam() with mkstemp() because the compiler gave
	 warnings about tmpnam being a possible security hole.
	-Dependency information now goes in the file depend and will be
	 calculated if the file doesn't exist.
-- David Fries <dfries@mail.win.org>

12-16-2001:
	-Changed license to GPL (with permission from all 4 authors).
	-Added info to readme about GPL and about lack of support from Timex.
	-Created manpages for svgablink, serblink, setwatch, and settime
	 They still need work - I'll get to it when I can.
	-Changed settime default to ironman for consistency w/ setwatch.
	-Fixed apparent missing semicolon in dataread.y.
	-Added DESTDIR to Makefile to be more friendly with Debian packaging.
	-Split Makefile "install" rule into "install" (for basic datalink
	 user requirements) and "install-devel" for items needed only for
	 development.
	-Added Makefile "uninstall" rule.
-- Steaphan Greene <stea@cs.binghamton.edu>

02-14-2001:
The changes listed below from Frank Denis were incorporated with exception
of the time of the week information, I'll have to look into that later.
More important user visible changes are as follows,
	It will now only search in the users path for serblink and svgablink
		not any hard-coded paths.  Previous behavior was to try
		the user path and if it wasn't found, try executing
		the program in the current working directory.
	settime is now installed by default and will accept a command line for
		the different types of watches
	For me, svgablink no longer hangs on exit
-- David Fries <dfries@mail.win.org>

02-04-2001:
I don't see the problem with the day of week.  I'm reverting back to